<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg_grey"
    android:fitsSystemWindows="true">

    <RelativeLayout
        android:id="@+id/top_layout"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_alignParentBottom="false"
        android:layout_alignParentStart="false"
        android:background="@color/bg_grey">

        <ImageView
            android:id="@+id/imageView5"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:alpha=".3"
            android:src="@drawable/logo_size_icon_invert" />

        <TextView
            android:id="@+id/titleText"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical|center_horizontal"
            android:text="Date Swiper "
            android:textAlignment="center"
            android:textColor="@color/text_foreground"
            android:textSize="24dp" />

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/logoLayout"
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/top_layout"
        android:layout_marginTop="25dp"
        android:gravity="center_vertical|center_horizontal"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="150dp"
            android:layout_height="150dp"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            app:srcCompat="@drawable/logo_size_icon_invert" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/bottomLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/logoLayout"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="25dp">

        <TextView
            android:id="@+id/welcomeText5"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical|center_horizontal"
            android:text="Last Step!"
            android:textAlignment="center"
            android:textColor="@color/text_foreground"
            android:textSize="28dp" />

        <TextView
            android:id="@+id/welcomeText2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/welcomeText5"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="You will need to login to Tinder.com"
            android:textAlignment="center"
            android:textColor="@color/text_foreground"
            android:textSize="18dp" />

        <TextView
            android:id="@+id/welcomeText6"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_below="@+id/welcomeText2"
            android:layout_marginTop="5dp"
            android:gravity="center_vertical|center_horizontal"
            android:text="Happy swiping!"
            android:textAlignment="center"
            android:textColor="@color/text_foreground"
            android:textSize="18dp" />

        <Button
            android:id="@+id/nextThreeButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:text="Login to Tinder" />

    </RelativeLayout>

</RelativeLayout>