...
            android:text="We need your permission to locate your device for swiping"
            android:textAlignment="center"
            android:textColor="@color/text_foreground"
            android:textSize="18dp" />

        <Button
            android:id="@+id/nextTwoButton"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_centerHorizontal="true"
            android:layout_marginBottom="15dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:text="Next" />
    </RelativeLayout>

</RelativeLayout>
