...
        android:text="100 free swipes per day"
        android:textAlignment="center"
        android:textColor="@color/text_foreground"
        android:textSize="18dp" />

    <Button
        android:id="@+id/nextOneButton"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="15dp"
        android:layout_marginLeft="15dp"
...
